--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -1,3 +1,4 @@
+{% load blog_tags %}
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -12,8 +13,21 @@
     {% endblock %}
 </div>
 <div id="sidebar">
-    <h2>My Blog</h2>
-    <p>This is my blog.</p>
+    <h2><a href="{% url 'blog:post_list' %}">My Blog</a> </h2>
+    <p>This is my blog.I've written {% total_posts %} posts so far.</p>
+    <p><a href="{% url 'post_feed' %}">Subscribe to my Rss feed.</a> </p>
+    <p><a href="{% url 'blog:post_search' %}">Search</a> </p>
+    <h3>Latest posts</h3>
+    {% show_latest_posts 3 %}
+    <h3>Most comments post</h3>
+    {% get_most_commented_posts as most_commented_posts %}
+    <ul>
+        {% for post in most_commented_posts %}
+        <li>
+            <a href="{{ post_get_absolute_url }}">{{ post.title }}</a>
+        </li>
+        {% endfor %}
+    </ul>
 </div>
 </body>
 </html>
